changes for cime and share

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -30,8 +30,10 @@ required = True
 
 [cime]
 protocol = git
-tag = cime6.0.250
-repo_url = https://github.com/ESMCI/cime.git
+branch = feature/fix_cprnc
+repo_url = https://github.com/mvertens/cime.git
+#tag = cime6.0.250
+#repo_url = https://github.com/ESMCI/cime.git
 local_path = cime
 required = True
 
@@ -41,10 +43,8 @@ required = True
 
 [share]
 protocol = git
-#branch = feature/update_share
-#repo_url = https://github.com/mvertens/NorESM_share
-tag = share1.1.2
-repo_url = https://github.com/ESCOMP/CESM_share
+branch = feature/update_share
+repo_url = https://github.com/mvertens/NorESM_share
 local_path = share
 required = True
 
