--- a/Externals.cfg
+++ b/Externals.cfg
@@ -64,7 +64,7 @@ required = True
 [cam]
 protocol = git
 #branch = feature/UpdateNoresmBranch
-tag = c1b868a5
+tag = feature/UpdateNoresmBranch
 repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
@@ -80,7 +80,7 @@ required = True
 
 [cdeps]
 protocol = git
-tag = cdeps1.0.36
+tag = cdeps1.0.43
 repo_url = https://github.com/ESCOMP/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
@@ -88,16 +88,16 @@ required = True
 
 [cmeps]
 protocol = git
-#branch = feature/dms_and_bromo
-tag = 9598a494
+#branch = feature/add_blom
+tag = ee184f74
 repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cism]
 protocol = git
-#branch = feature/cism2mosart
-tag = 756cfa6
+#branch = feature/cism_coupling_to_ocn
+tag = 5df18f4e
 repo_url = https://github.com/mvertens/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
