--- a/Externals.cfg
+++ b/Externals.cfg
@@ -54,9 +54,12 @@ required = True
 
 [blom]
 protocol = git
-#tag = dev1.6.1.2
-branch = feature/fixbugs
-repo_url = https://github.com/mvertens/BLOM
+# tag = dev1.6.1.3
+# https://github.com/NorESMhub/BLOM
+# branch = feature/ocn2glc
+tag = 586a758
+repo_url = https://github.com/mvertens/CAM
+branch = feature/ocn2glc
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
@@ -89,7 +92,7 @@ required = True
 [cmeps]
 protocol = git
 #branch = feature/add_blom
-tag = ee184f74
+tag = 5bf3de09
 repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
