--- a/Externals.cfg
+++ b/Externals.cfg
@@ -23,7 +23,7 @@ required = True
 [ccs_config]
 protocol = git
 #branch = feature/trigrid
-tag = 7adbb95
+tag = 44838ea
 repo_url = https://github.com/mvertens/ccs_config_cesm.git
 local_path = ccs_config
 required = True
@@ -58,8 +58,7 @@ protocol = git
 # https://github.com/NorESMhub/BLOM
 # branch = feature/ocn2glc
 tag = 586a758
-repo_url = https://github.com/mvertens/CAM
-branch = feature/ocn2glc
+repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
