updates to Externals

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,18 +22,15 @@ required = True
 
 [ccs_config]
 protocol = git
-#branch = feature/trigrid
-tag = 44838ea
-repo_url = https://github.com/mvertens/ccs_config_cesm.git
+tag = ccs_config_noresm0.0.31
+repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
 local_path = ccs_config
 required = True
 
 [cime]
 protocol = git
-branch = feature/fix_cprnc
-repo_url = https://github.com/mvertens/cime.git
-#tag = cime6.0.250
-#repo_url = https://github.com/ESMCI/cime.git
+tag = cime6.0.250_noresm_v0
+repo_url = https://github.com/NorESMhub/cime.git
 local_path = cime
 required = True
 
@@ -54,9 +51,7 @@ required = True
 
 [blom]
 protocol = git
-# tag = dev1.6.1.3
-# https://github.com/NorESMhub/BLOM
-# branch = feature/ocn2glc
+#branch = feature/ocn2glc (one off from dev1.6.1.3)
 tag = 586a758
 repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
@@ -66,7 +61,7 @@ required = True
 [cam]
 protocol = git
 #branch = feature/UpdateNoresmBranch
-tag = feature/UpdateNoresmBranch
+tag = 8d0ea5ee
 repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
@@ -91,7 +86,7 @@ required = True
 [cmeps]
 protocol = git
 #branch = feature/add_blom
-tag = 5bf3de09
+tag = 38622180
 repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
