--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,7 +22,8 @@ required = True
 
 [ccs_config]
 protocol = git
-tag = 0231125
+#branch feature/add_new_blomgrid
+tag = 17e2cc0
 repo_url = https://github.com/mvertens/ccs_config_cesm.git
 local_path = ccs_config
 required = True
@@ -51,8 +52,8 @@ required = True
 
 [blom]
 protocol = git
-#branch = feature/ocn2glc
-tag = 7fc762e
+#branch = feature/add_05degree_blom
+tag = 0960fc1
 repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
@@ -70,7 +71,7 @@ required = True
 [cice6]
 protocol = git
 #branch = feature/sithick_to_wav
-tag = 91dac59
+tag = da5661b
 repo_url = https://github.com/mvertens/CESM_CICE
 local_path = components/cice
 externals = Externals.cfg
@@ -78,7 +79,7 @@ required = True
 
 [cdeps]
 protocol = git
-tag = cdeps1.0.44
+tag = cdeps1.0.46
 repo_url = https://github.com/ESCOMP/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
@@ -86,8 +87,8 @@ required = True
 
 [cmeps]
 protocol = git
-#branch = feature/sithick_to_wav
-tag = cb7e19b7
+#branch = feature/sithick_to_wav (PR done)
+tag = efff64fb
 repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
